RESOLVED FIXED 119066
REGRESSION (r152335): Mac Pro title occluded in MobileSafari; can't scroll page
https://bugs.webkit.org/show_bug.cgi?id=119066
Summary REGRESSION (r152335): Mac Pro title occluded in MobileSafari; can't scroll page
Daniel Bates
Reported 2013-07-24 14:51:41 PDT
The title image "Mac Pro" on <http://www.apple.com/mac-pro/index1.html> is occluded and the page can't be scrolled following <http://trac.webkit.org/changeset/152335> (bug #118337). In <http://images.apple.com/v/mac-pro/home/a/styles/mac-pro-iphone.css>, they have the following CSS: #overview.enhanced-active #viewable { overflow: hidden; overflow-y: scroll; -webkit-overflow-scrolling: touch; position: absolute; width: 1024px; z-index: 10; top:0; }
Attachments
Patch (1.88 KB, patch)
2013-07-24 14:57 PDT, Daniel Bates
no flags
Daniel Bates
Comment 1 2013-07-24 14:53:44 PDT
Daniel Bates
Comment 2 2013-07-24 14:57:00 PDT
WebKit Commit Bot
Comment 3 2013-07-24 15:44:05 PDT
Comment on attachment 207414 [details] Patch Clearing flags on attachment: 207414 Committed r153105: <http://trac.webkit.org/changeset/153105>
WebKit Commit Bot
Comment 4 2013-07-24 15:44:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.